--- a/architecture/recreation_commons/index.html
+++ b/architecture/recreation_commons/index.html
@@ -119,7 +119,7 @@
   <nav class="header" id="header">
     <div class="backgroundColorNav">
 
-      <a href="http://vickywang.me/" class="logo pointer SiteWide">VW</a>
+      <a href="http://vickywang.me/" class="logo pointer colorBlack">VW</a>
 
       <div class="navbar">
         <ul class="nav-menu">
