--- a/design_system/index.html
+++ b/design_system/index.html
@@ -37,11 +37,11 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
-  <!--sitewide font-family: 'Lato', sans-serif; -->
+  <!--colorBlack font-family: 'Lato', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
-  <!--sitewide - alt - font-family: 'Roboto', sans-serif; -->
+  <!--colorBlack - alt - font-family: 'Roboto', sans-serif; -->
   <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
   <!--special font-family: 'Train One'; -->
   <link
@@ -736,7 +736,7 @@
     <div class="element">
       <h3>Brand Expression</h3>
     </div>
-    <div class="Grid Grid--gutters Grid--cols-6 u-textCenter">
+    <div class="Grid Grid--gutters Grid--cols-6 u-textCenter ">
     </div>
     <div class="Grid Grid--gutters Grid--cols-12 u-textCenter">
       <div class="Grid-cell">
