--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
-  <!--sitewide font-family: 'Lato', sans-serif; -->
+  <!--colorBlack font-family: 'Lato', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
-  <!--sitewide - alt - font-family: 'Roboto', sans-serif; -->
+  <!--colorBlack - alt - font-family: 'Roboto', sans-serif; -->
   <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
   <!--special font-family: 'Train One'; -->
   <link
@@ -121,7 +121,7 @@
   <!-- header -->
   <nav class="header" id="header">
     <div class="backgroundColorNav">
-      <a href="http://vickywang.me/" class="logo pointer SiteWide">VW</a>
+      <a href="http://vickywang.me/" class="logo pointer colorBlack">VW</a>
       <div class="navbar">
         <ul class="nav-menu">
           <li class="nav-item active greenNav marginZero"><a href="/" class="nav-link box">PROJECT</a>
@@ -170,7 +170,9 @@
       </div>
       <div class="Grid Grid--full">
         <div class="Grid-cell colorGreyTesting">
-          <h3>I work with a small team based in San Francisco to design business and consumer-facing websites. My strength lies in understanding complex problems and requirements and transforming them into simple and effective solutions. </h3>
+          <h3>I work with a small team based in San Francisco to design business and consumer-facing websites. My
+            strength lies in understanding complex problems and requirements and transforming them into simple and
+            effective solutions. </h3>
         </div>
       </div>
       <div class="Grid Grid--gutters Grid--cols-3">
@@ -214,14 +216,14 @@
         <div class="element">
           <a href="/appointa/">
             <div class="">
-              <div class="elementCard float cardBorder APPOINTA ">
-                <img src="./image/Cover_APPOINTA.jpg" alt="APPOINTA">
+              <div class="elementCard float cardBorder APPOINTA shadowBox2">
+                <div class="cardImgCrop cardImgCropAPPOINTA"></div>
                 <div class="element">
                   <div class="element">
                     <h4>For job interview scheduling</h4>
                     <h2 class="arrCard">APPOINTA</h2>
-                    <h3>Streamline the job interview scheduling process to make it more efficient,
-                      convenient, and intuitive</h3>
+                    <h4 class="colorGreyTesting">Streamline the job interview scheduling process to make it more efficient,
+                      convenient, and intuitive</h4>
                   </div>
                 </div>
               </div>
@@ -233,14 +235,14 @@
         <div class="element">
           <a href="/seer/">
             <div class="elementCard float cardBorder SEER shadowBox2">
-              <img src="./image/Cover_SEER.jpg" alt="SEER">
+              <div class="cardImgCrop cardImgCropSEER"></div>
               <div class="element">
                 <div class="element">
                   <h4>For tracking business performance</h4>
                   <h2 class="arrCard ">SEER</h2>
                   <!--Analysis Report-->
-                  <h3>Help the brand managers understand their potential users and promote their
-                    brand on Reddit</h3>
+                  <h4 class="colorGreyTesting">Help the brand managers understand their potential users and promote their
+                    brand on Reddit</h4>
                 </div>
               </div>
             </div>
@@ -255,7 +257,7 @@
         <div class="element">
           <div class="elementCard float cardBorder shadowBox2">
             <div class="img__wrap">
-              <img class="img__img" alt="Work Samples" src="./image/Cover_worksample.png" />
+              <div class="cardImgCrop cardImgCropWS"></div>
               <div class="img__description">
                 <div class="input-field">
                   <input type="password" id="password" placeholder="Password">
@@ -271,8 +273,7 @@
               <div class="element">
                 <h4>Password is required </h4>
                 <h2 class="arrCard colorBlack">Work Samples</h2>
-                <h3>broad skill set developed in a startup environment
-                  with deep engagement in all stages of the design process</h3>
+                <h4 class="colorGreyTesting">Extensive startup experience with full design process immersion and diverse skill set</h4>
               </div>
             </div>
           </div>
@@ -284,13 +285,13 @@
             <div class="">
 
               <div class="elementCard float cardBorder shadowBox2">
-                <img src="./image/Cover_portfolioWeb.png" alt="vickywang.me">
+                <div class="cardImgCrop cardImgCropDS"></div>
                 <div class="element">
                   <div class="element">
                     <h4>For website vickywang.me </h4>
                     <h2 class="arrCard colorBlack">Design System</h2>
-                    <h3>Creating a design system to establish consistent branding and styling across the entire website
-                    </h3>
+                    <h4 class="colorGreyTesting">Creating a design system to establish consistent branding and styling across the entire website
+                    </h4>
                   </div>
                 </div>
               </div>
@@ -322,11 +323,11 @@
               <img src="./image/layout_GardenersHub.png" alt="Gardeners Hub">
               <div class="element">
                 <div class="element">
-                  <h5>For Gardeners</h5>
+                  <h4>For Gardeners</h4>
                   <h3>Gardeners Hub</h3>
-                  <h5>Find solutions and ideas to help gardeners to
+                  <h4>Find solutions and ideas to help gardeners to
                     improve their horticultural experience with neighbors and reduce wasting resources
-                    by selling or sharing locally.</h5>
+                    by selling or sharing locally.</h4>
                 </div>
               </div>
             </div>
@@ -340,10 +341,10 @@
               <img src="./image/layout_AppointmentMaker.png" alt="Make appointment">
               <div class="element">
                 <div class="element">
-                  <h5>For makeing appointment</h5>
+                  <h4>For makeing appointment</h4>
                   <h3>Appointment Maker</h3>
-                  <h5>Appointment maker is a personal reminder that combines different tasks into one
-                    App. easy to manage appointment scheduling.</h5>
+                  <h4>Appointment maker is a personal reminder that combines different tasks into one
+                    App. easy to manage appointment scheduling.</h4>
                 </div>
               </div>
             </div>
@@ -357,10 +358,10 @@
               <img src="./image/layout_MealPlanner.png" alt="Meal Planner">
               <div class="element">
                 <div class="element">
-                  <h5 class="">For plan meal</h5>
+                  <h4 class="">For plan meal</h4>
                   <h3>Meal Planner</h3>
-                  <h5>A single mobile app that helps people to improve their cooking experience by
-                    generating a shopping list based on information from their kitchen</h5>
+                  <h4>A single mobile app that helps people to improve their cooking experience by
+                    generating a shopping list based on information from their kitchen</h4>
                 </div>
               </div>
             </div>
