--- a/about/index.html
+++ b/about/index.html
@@ -75,11 +75,11 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
-  <!--sitewide font-family: 'Lato', sans-serif; -->
+  <!--colorBlack font-family: 'Lato', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
-  <!--sitewide - alt - font-family: 'Roboto', sans-serif; -->
+  <!--colorBlack - alt - font-family: 'Roboto', sans-serif; -->
   <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
   <!--special font-family: 'Train One'; -->
   <link
@@ -161,7 +161,7 @@
     <div class="backgroundColorNav">
 
 
-      <a href="http://vickywang.me/" class="logo pointer SiteWide">VW</a>
+      <a href="http://vickywang.me/" class="logo pointer colorBlack">VW</a>
 
       <div class="navbar">
         <ul class="nav-menu">
@@ -212,7 +212,7 @@
         </div>
       </div>
       <div class="Grid Grid--full">
-        <div class="Grid-cel colorGreyDkTesting">
+        <div class="Grid-cel colorGreyTesting">
           <h3>As a UI/UX designer with a background in <a href="/architecture/" class="textUnderline ">architecture</a>,
             I bring a unique perspective and a broad skill set
             to my work. I have developed my skills in a startup environment, where I have been deeply engaged in all
@@ -344,7 +344,7 @@
           <div class="progressStepContainer">
             <ul class="progress">
               <li class="progress__item ">
-                <h3> <strong class="colorGreyDk">Art </strong> </h3>
+                <h3> <strong class="colorGrey">Art </strong> </h3>
 
                 <ul>
                   <li> developed the nature of artistic experience, allows me to express our emotions
@@ -361,7 +361,7 @@
               <div class="blankHXS"></div>
 
               <li class="progress__item">
-                <h3> <strong class="colorGreyDk">Design </strong> </h3>
+                <h3> <strong class="colorGrey">Design </strong> </h3>
 
                 <ul>
                   <li>having a strong creative vision</li>
@@ -372,7 +372,7 @@
               <div class="blankHXS"></div>
 
               <li class="progress__item">
-                <h3> <strong class="colorGreyDk">Architecture </strong> </h3>
+                <h3> <strong class="colorGrey">Architecture </strong> </h3>
 
                 <ul>
 
