--- a/photography/index.html
+++ b/photography/index.html
@@ -51,11 +51,11 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
-  <!--sitewide font-family: 'Lato', sans-serif; -->
+  <!--colorBlack font-family: 'Lato', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
-  <!--sitewide - alt - font-family: 'Roboto', sans-serif; -->
+  <!--colorBlack - alt - font-family: 'Roboto', sans-serif; -->
   <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
   <!--special font-family: 'Train One'; -->
   <link
@@ -132,7 +132,7 @@
   <!-- header -->
   <nav class="header" id="header">
     <div class="backgroundColorNav">
-      <a href="http://vickywang.me/" class="logo pointer SiteWide">VW</a>
+      <a href="http://vickywang.me/" class="logo pointer colorBlack">VW</a>
       <div class="navbar">
         <ul class="nav-menu">
           <li class="nav-item inactive greenNav marginZero"><a href="/" class="nav-link box">PROJECT</a>
@@ -176,7 +176,7 @@
         </strong>
       </div>
       <div class="Grid Grid--full">
-        <div class="Grid-cell colorGreyDkTesting">
+        <div class="Grid-cell colorGreyTesting">
      
 
           <h3>Through my unique perspective and lens, I find joy in capturing the intricate narratives and inherent
