--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-
 <html>
 
 <head>
@@ -39,11 +37,11 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
-  <!--colorBlack font-family: 'Lato', sans-serif; -->
+  <!--sitewide font-family: 'Lato', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
-  <!--colorBlack - alt - font-family: 'Roboto', sans-serif; -->
+  <!--sitewide - alt - font-family: 'Roboto', sans-serif; -->
   <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
   <!--special font-family: 'Train One'; -->
   <link
@@ -121,7 +119,7 @@
   <!-- header -->
   <nav class="header" id="header">
     <div class="backgroundColorNav">
-      <a href="http://vickywang.me/" class="logo pointer colorBlack">VW</a>
+      <a href="http://vickywang.me/" class="logo pointer SiteWide">VW</a>
       <div class="navbar">
         <ul class="nav-menu">
           <li class="nav-item active greenNav marginZero"><a href="/" class="nav-link box">PROJECT</a>
@@ -169,10 +167,9 @@
         </div>
       </div>
       <div class="Grid Grid--full">
-        <div class="Grid-cell colorGreyTesting">
-          <h3>I work with a small team based in San Francisco to design business and consumer-facing websites. My
-            strength lies in understanding complex problems and requirements and transforming them into simple and
-            effective solutions. </h3>
+        <div class="Grid-cell">
+          <h4>I am currently based out of San Francisco</h4>
+          <h4>design for business and consumer-facing websites with a small team</h4>
         </div>
       </div>
       <div class="Grid Grid--gutters Grid--cols-3">
@@ -216,13 +213,13 @@
         <div class="element">
           <a href="/appointa/">
             <div class="">
-              <div class="elementCard float cardBorder APPOINTA shadowBox2 ">
-                <div class="cardImgCrop cardImgCropAPPOINTA"></div>
+              <div class="elementCard float cardBorder APPOINTA">
+                <img src="./image/Cover_APPOINTA.png" alt="APPOINTA">
                 <div class="element">
                   <div class="element">
-                    <h4>For job interview scheduling</h4>
-                    <h2 class="arrCard">APPOINTA</h2>
-                    <h4 class="colorGreyTesting">Streamline the job interview scheduling process to make it more efficient,
+                    <h5>For job interview scheduling</h5>
+                    <h3 class="arrCard colorBlack">APPOINTA</h3>
+                    <h4>Streamline the job interview scheduling process to make it more efficient,
                       convenient, and intuitive</h4>
                   </div>
                 </div>
@@ -234,14 +231,14 @@
       <div class="Grid-cell">
         <div class="element">
           <a href="/seer/">
-            <div class="elementCard float cardBorder SEER shadowBox2 ">
-              <div class="cardImgCrop cardImgCropSEER"></div>
+            <div class="elementCard float cardBorder SEER">
+              <img src="./image/Cover_SEER.png" alt="SEER">
               <div class="element">
                 <div class="element">
-                  <h4>For tracking business performance</h4>
-                  <h2 class="arrCard ">SEER</h2>
+                  <h5>For tracking business performance</h5>
+                  <h3 class="arrCard colorBlack">SEER</h3>
                   <!--Analysis Report-->
-                  <h4 class="colorGreyTesting">Help the brand managers understand their potential users and promote their
+                  <h4>Help the brand managers understand their potential users and promote their
                     brand on Reddit</h4>
                 </div>
               </div>
@@ -253,11 +250,12 @@
 
 
     <div class="Grid Grid--gutters Grid--cols-2">
+
       <div class="Grid-cell">
         <div class="element">
-          <div class="elementCard float cardBorder shadowBox2">
+          <div class="elementCard float cardBorder">
             <div class="img__wrap">
-              <div class="cardImgCrop cardImgCropWS"></div>
+              <img class="img__img" alt="Work Samples" src="./image/Cover_worksample.png" />
               <div class="img__description">
                 <div class="input-field">
                   <input type="password" id="password" placeholder="Password">
@@ -271,9 +269,10 @@
             </div>
             <div class="element">
               <div class="element">
-                <h4>Password is required </h4>
-                <h2 class="arrCard colorBlack">Work Samples</h2>
-                <h4 class="colorGreyTesting">Extensive startup experience with full design process immersion and diverse skill set</h4>
+                <h5>Password is required </h5>
+                <h3 class="arrCard colorBlack">Work Samples</h3>
+                <h4>broad skill set developed in a startup environment
+                  with deep engagement in all stages of the design process</h4>
               </div>
             </div>
           </div>
@@ -284,13 +283,13 @@
           <a href="/design_system/">
             <div class="">
 
-              <div class="elementCard float cardBorder shadowBox2">
-                <div class="cardImgCrop cardImgCropDS"></div>
+              <div class="elementCard float cardBorder">
+                <img src="./image/Cover_portfolioWeb.svg" alt="vickywang.me">
                 <div class="element">
                   <div class="element">
-                    <h4>For website vickywang.me </h4>
-                    <h2 class="arrCard colorBlack">Design System</h2>
-                    <h4 class="colorGreyTesting">Creating a design system to establish consistent branding and styling across the entire website
+                    <h5>For website vickywang.me </h5>
+                    <h3 class="arrCard colorBlack">Design System</h3>
+                    <h4>Creating a design system to establish consistent branding and styling across the entire website
                     </h4>
                   </div>
                 </div>
@@ -319,15 +318,15 @@
       <div class="Grid-cell">
         <div class="element">
           <a href="/gardeners_hub/">
-            <div class="elementCard float cardBorder shadowBox2">
+            <div class="elementCard float cardBorder">
               <img src="./image/layout_GardenersHub.png" alt="Gardeners Hub">
               <div class="element">
                 <div class="element">
-                  <h4>For Gardeners</h4>
+                  <h5>For Gardeners</h5>
                   <h3>Gardeners Hub</h3>
-                  <h4>Find solutions and ideas to help gardeners to
+                  <h5>Find solutions and ideas to help gardeners to
                     improve their horticultural experience with neighbors and reduce wasting resources
-                    by selling or sharing locally.</h4>
+                    by selling or sharing locally.</h5>
                 </div>
               </div>
             </div>
@@ -337,14 +336,14 @@
       <div class="Grid-cell">
         <div class="element">
           <a href="/appointment_maker/">
-            <div class="elementCard float cardBorder shadowBox2">
+            <div class="elementCard float cardBorder">
               <img src="./image/layout_AppointmentMaker.png" alt="Make appointment">
               <div class="element">
                 <div class="element">
-                  <h4>For makeing appointment</h4>
+                  <h5>For makeing appointment</h5>
                   <h3>Appointment Maker</h3>
-                  <h4>Appointment maker is a personal reminder that combines different tasks into one
-                    App. easy to manage appointment scheduling.</h4>
+                  <h5>Appointment maker is a personal reminder that combines different tasks into one
+                    App. easy to manage appointment scheduling.</h5>
                 </div>
               </div>
             </div>
@@ -354,14 +353,14 @@
       <div class="Grid-cell">
         <div class="element">
           <a href="/meal_planner/">
-            <div class="elementCard float cardBorder shadowBox2">
+            <div class="elementCard float cardBorder">
               <img src="./image/layout_MealPlanner.png" alt="Meal Planner">
               <div class="element">
                 <div class="element">
-                  <h4 class="">For plan meal</h4>
+                  <h5 class="">For plan meal</h5>
                   <h3>Meal Planner</h3>
-                  <h4>A single mobile app that helps people to improve their cooking experience by
-                    generating a shopping list based on information from their kitchen</h4>
+                  <h5>A single mobile app that helps people to improve their cooking experience by
+                    generating a shopping list based on information from their kitchen</h5>
                 </div>
               </div>
             </div>
@@ -389,8 +388,9 @@
     <div>TOP</div>
   </button>
   <!--back to top-->
+  <!--footer-->
+  <div class="colorBgGrey">
 
-  <footer class="colorBgGrey">
     <div class="footer">
       <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
       </p>
@@ -412,15 +412,16 @@
         </a>
       </div>
     </div>
-  </footer>
+  </div>
+  <!--footer-->
+
+
+
+
+
+
+
 
 </body>
-
-
-
-
-
-
-
 
 </html>
