--- a/appointa/index.html
+++ b/appointa/index.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-
 <html lang="en">
 
 
@@ -19,7 +17,8 @@
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
   <meta property='og:title' content="Vicky Wang | UX/UI Designer | Product Designer" />
-  <meta property='og:description' content='A simple way for recruiters to quickly and easily schedule interviews' />
+  <meta property='og:description'
+    content='A simple way for recruiters to quickly and easily schedule interviews' />
   <meta property='og:url' content="https://vickywang.me/" />
   <meta property="og:site_name" content="Vicky Wang's Project">
 
@@ -29,18 +28,18 @@
   <link rel="stylesheet" href="../main.css">
   <script type="text/javascript" src="../scripts.js"></script>
   <script type="text/javascript" src="../scripts_project.js"></script>
-
+  
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
-  <!--colorBlack font-family: 'Lato', sans-serif; -->
+  <!--sitewide font-family: 'Lato', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
-  <!--colorBlack - alt - font-family: 'Roboto', sans-serif; -->
+  <!--sitewide - alt - font-family: 'Roboto', sans-serif; -->
   <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
   <!--special font-family: 'Train One'; -->
   <link
@@ -984,8 +983,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextNote colorAPPOINTAYellow u-textCenter">The most significant hurdle is aligning
-                    the availability of both candidates and hiring managers
+                  <p class="specialTextNote colorAPPOINTAYellow u-textCenter">The most significant hurdle is aligning the availability of both candidates and hiring managers
                   </p>
 
                 </div>
@@ -1582,9 +1580,7 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
-                <p class="specialTextNote colorAPPOINTAYellow u-textCenter">The goal of the lo-fi sketch is to arrange
-                  the key steps in order and pair candidates with interviewers who have both the necessary availability
-                  and relevant skill set.</p>
+                <p class="specialTextNote colorAPPOINTAYellow u-textCenter">The goal of the lo-fi sketch is to arrange the key steps in order and pair candidates with interviewers who have both the necessary availability and relevant skill set.</p>
               </div>
             </div>
           </div>
@@ -1850,8 +1846,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextNote colorAPPOINTAYellow u-textCenter">Continue focus on the flow and navigation.
-                    enhance wireframes with additional details..</p>
+                  <p class="specialTextNote colorAPPOINTAYellow u-textCenter">Continue focus on the flow and navigation. enhance wireframes with additional details..</p>
                 </div>
               </div>
             </div>
@@ -2340,7 +2335,8 @@
 
   <!--back to top-->
 
-  <footer class="colorBgGrey">
+  <!--footer-->
+  <div class="colorBgGrey">
 
     <div class="footer">
       <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
@@ -2363,10 +2359,11 @@
         </a>
       </div>
     </div>
-  </footer>
+  </div>
+  <!--footer-->
+
+
 </body>
-
-
 
 
 
