--- a/architecture/index.html
+++ b/architecture/index.html
@@ -46,11 +46,11 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
-  <!--colorBlack font-family: 'Lato', sans-serif; -->
+  <!--black font-family: 'Lato', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
-  <!--colorBlack - alt - font-family: 'Roboto', sans-serif; -->
+  <!--black - alt - font-family: 'Roboto', sans-serif; -->
   <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
   <!--special font-family: 'Train One'; -->
   <link
@@ -122,7 +122,6 @@
   <!-- header -->
   <nav class="header" id="header">
     <div class="backgroundColorNav">
-
       <a href="http://vickywang.me/" class="logo pointer colorBlack">VW</a>
 
       <div class="navbar">
