--- a/design_system/index.html
+++ b/design_system/index.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-
 <html lang="en">
 
 
@@ -37,11 +35,11 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
     rel="stylesheet">
-  <!--colorBlack font-family: 'Lato', sans-serif; -->
+  <!--sitewide font-family: 'Lato', sans-serif; -->
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
-  <!--colorBlack - alt - font-family: 'Roboto', sans-serif; -->
+  <!--sitewide - alt - font-family: 'Roboto', sans-serif; -->
   <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
   <!--special font-family: 'Train One'; -->
   <link
@@ -207,23 +205,22 @@
     </div>
   </div>
   <div class="blankHM"></div>
-  <!-- Title -->
-  <div class="wrapper">
-    <div class="Grid Grid--gutters Grid--center u-textCenter">
-      <div class="Grid-cell">
-        <div class="element">
-          <img class="elementX shrinkAndExpand widthS" src="../icon/arrowLR.svg" alt="se-arrow">
+    <!-- Title -->
+    <div class="wrapper">
+      <div class="Grid Grid--gutters Grid--center u-textCenter">
+        <div class="Grid-cell">
+          <div class="element">
+            <img class="elementX shrinkAndExpand widthS" src="../icon/arrowLR.svg" alt="se-arrow">
 
 
-          <h3 class="Grid Grid--center colorBlack"> Please adjust your browser window to view the responsive layout.
-          </h3>
+            <h3 class="Grid Grid--center colorBlack"> Please adjust your browser window to view the responsive layout.</h3>
 
-          <h5 class="textItalic">Design, implement, and maintain this website since October 2020</h5>
+            <h5 class="textItalic">Design, implement, and maintain this website since October 2020</h5>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <!-- Title -->
+    <!-- Title -->
   <div class="Grid Grid--gutters Grid--cols-3 wrapper">
 
     <div class="Grid-cell">
@@ -320,7 +317,7 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS blackLessBG displayNone">HEX 161616</div>
+          <div class="blockS blackLess displayNone">HEX 161616</div>
         </div>
       </div>
     </div>
@@ -335,7 +332,7 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS blackLessBG displayNone">HEX 161616</div>
+          <div class="blockS blackLess displayNone">HEX 161616</div>
         </div>
       </div>
     </div>
@@ -350,12 +347,12 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS blackLessBG displayNone">HEX 161616</div>
+          <div class="blockS blackLess displayNone">HEX 161616</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS blackLessBG displayNone">HEX 161616</div>
+          <div class="blockS blackLess displayNone">HEX 161616</div>
         </div>
       </div>
     </div>
@@ -370,7 +367,7 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS blackLessBG displayNone">HEX 161616</div>
+          <div class="blockS blackLess displayNone">HEX 161616</div>
         </div>
       </div>
     </div>
@@ -736,8 +733,11 @@
     <div class="element">
       <h3>Brand Expression</h3>
     </div>
-    <div class="Grid Grid--gutters Grid--cols-6 u-textCenter ">
+    <div class="Grid Grid--gutters Grid--cols-6 u-textCenter">
     </div>
+
+
+
     <div class="Grid Grid--gutters Grid--cols-12 u-textCenter">
       <div class="Grid-cell">
         <div class="element">
@@ -780,11 +780,14 @@
         </div>
       </div>
     </div>
+
+
     <div class="blankHS"></div>
     <div class="element">
       <h3>Action</h3>
     </div>
-    <div class="Grid Grid--gutters Grid--cols-6 u-textCenter">
+
+        <div class="Grid Grid--gutters Grid--cols-6 u-textCenter">
       <div class="Grid-cell">
         <div class="element">
           <div class="blockS colorLt shadowBox">HEX AAD9D9</div>
@@ -1261,7 +1264,8 @@
 
   <!--back to top-->
 
-  <footer class="colorBgGrey">
+  <!--footer-->
+  <div class="colorBgGrey">
 
     <div class="footer">
       <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
@@ -1284,11 +1288,11 @@
         </a>
       </div>
     </div>
-  </footer>
+  </div>
+  <!--footer-->
+
+
 </body>
-
-
-
 
 
 
