--- a/design_system/index.html
+++ b/design_system/index.html
@@ -205,22 +205,23 @@
     </div>
   </div>
   <div class="blankHM"></div>
-    <!-- Title -->
-    <div class="wrapper">
-      <div class="Grid Grid--gutters Grid--center u-textCenter">
-        <div class="Grid-cell">
-          <div class="element">
-            <img class="elementX shrinkAndExpand widthS" src="../icon/arrowLR.svg" alt="se-arrow">
+  <!-- Title -->
+  <div class="wrapper">
+    <div class="Grid Grid--gutters Grid--center u-textCenter">
+      <div class="Grid-cell">
+        <div class="element">
+          <img class="elementX shrinkAndExpand widthS" src="../icon/arrowLR.svg" alt="se-arrow">
 
 
-            <h3 class="Grid Grid--center colorBlack"> Please adjust your browser window to view the responsive layout.</h3>
+          <h3 class="Grid Grid--center colorBlack"> Please adjust your browser window to view the responsive layout.
+          </h3>
 
-            <h5 class="textItalic">Design, implement, and maintain this website since October 2020</h5>
-          </div>
+          <h5 class="textItalic">Design, implement, and maintain this website since October 2020</h5>
         </div>
       </div>
     </div>
-    <!-- Title -->
+  </div>
+  <!-- Title -->
   <div class="Grid Grid--gutters Grid--cols-3 wrapper">
 
     <div class="Grid-cell">
@@ -738,56 +739,103 @@
 
 
 
-    <div class="Grid Grid--gutters Grid--cols-12 u-textCenter">
+    <div class="Grid Grid--gutters Grid--cols-4 u-textCenter">
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS blackBG colorGreyLt shadowBox">HEX 202020</div>
+          <div class="blockS Grey900 colorGreyLt shadowBox">
+            <div>Grey 900</div>
+            <div>HEX:202020</div>
+          </div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS blackLessBG colorGreyLt shadowBox">HEX 5f6368</div>
+          <div class="blockS Grey800 colorGreyLt shadowBox">
+            <div>Grey 800</div>
+            <div>HEX:5f6368</div>
+          </div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorGreyBGTesting colorGreyLt shadowBox">HEX 83878a</div>
+          <div class="blockS Grey700 colorGreyLt shadowBox">
+            <div>Grey 700</div>
+            <div>HEX:83878a</div>
+          </div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorGreyDarkBGestBG colorGreyLt shadowBox">HEX 999D9F</div>
+          <div class="blockS colorGreyDarkBGestBG colorGreyLt shadowBox">
+            <div>Grey 600</div>
+            <div>HEX:999D9F</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS colorGreyDarkBG colorGreyLt shadowBox">
+            <div>Grey 500</div>
+            <div>HEX:c8c8c8</div>
+          </div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorGreyDarkBG colorGreyLt shadowBox">HEX c8c8c8</div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="blockS colorGreyNormalBG shadowBox">HEX e4e4e4</div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="blockS colorGreyLightBG shadowBox">HEX efefef</div>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="blockS colorGreyLightBGest shadowBox">HEX f8f8f8</div>
+          <div class="blockS colorGreyNormalBG shadowBox">
+            <div>Grey 400</div>
+            <div>HEX:e4e4e4</div>
+          </div>
         </div>
       </div>
     </div>
 
+    <div class="Grid Grid--gutters Grid--cols-4 u-textCenter">
 
+
+
+
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS colorGreyLightBG shadowBox">
+            <div>Grey 300</div>
+            <div>HEX:efefef</div>
+          </div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS colorGreyLightBGest shadowBox">Grey 200 HEX:f8f8f8</div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element displayNone">
+          <div class="blockS colorGreyLightBGest shadowBox">Grey 200 HEX:f8f8f8</div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element displayNone">
+          <div class="blockS colorGreyLightBGest shadowBox">Grey 200 HEX:f8f8f8</div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element displayNone">
+          <div class="blockS colorGreyLightBGest shadowBox">Grey 200 HEX:f8f8f8</div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element displayNone">
+          <div class="blockS colorGreyLightBGest shadowBox">Grey 200 HEX:f8f8f8</div>
+        </div>
+      </div>
+    </div>
     <div class="blankHS"></div>
     <div class="element">
       <h3>Action</h3>
     </div>
 
-        <div class="Grid Grid--gutters Grid--cols-6 u-textCenter">
+    <div class="Grid Grid--gutters Grid--cols-6 u-textCenter">
       <div class="Grid-cell">
         <div class="element">
           <div class="blockS colorLt shadowBox">HEX AAD9D9</div>
@@ -816,12 +864,12 @@
 
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS blackLessBG displayNone"></div>
+          <div class="blockS Grey800 displayNone"></div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS blackLessBG displayNone"></div>
+          <div class="blockS Grey800 displayNone"></div>
         </div>
       </div>
     </div>
