--- a/architecture/index.html
+++ b/architecture/index.html
@@ -201,7 +201,7 @@
       <div class="Grid-cell">
         <a href="./recreation_commons/">
           <div class="element">
-            <div class="elementCard float cardBorder">
+            <div class="elementCard float cardBorder shadowBoxLt">
               <img src="./ar_01.svg" alt="Appointa">
               <div class="elementInner">
                 <h5>Activity Center</h5>
@@ -222,7 +222,7 @@
       </div>      
       <div class="Grid-cell">
         <div class="element">
-          <div class=" float cardBorder">
+          <div class=" float cardBorder shadowBoxLt">
             <img src="./ar_06.jpg" alt="Appointa">
             <div class="elementInner">
               <h5>Form finding exercise </h5>
@@ -256,7 +256,7 @@
       <div class="Grid-cell">
         <a href="./narrow_stripes/">
           <div class="element">
-            <div class="elementCard float cardBorder">
+            <div class="elementCard float cardBorder shadowBoxLt">
               <img src="./ar_02.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Library and infrastructure</h5>
@@ -279,7 +279,7 @@
       <div class="Grid-cell">
         <a href="./recovery_of_river_edges/">
           <div class="element">
-            <div class="elementCard float cardBorder">
+            <div class="elementCard float cardBorder shadowBoxLt">
               <img src="./ar_03.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Pavilion</h5>
@@ -310,7 +310,7 @@
       <div class="Grid-cell">
         <a href="./thesis_studio/">
           <div class="element">
-            <div class="elementCard float cardBorder">
+            <div class="elementCard float cardBorder shadowBoxLt">
               <img src="./ar_07.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>On order: Differenciated</h5>
@@ -331,7 +331,7 @@
       <div class="Grid-cell">
         <a href="./the_rotation_of_curves/">
           <div class="element">
-            <div class="elementCard float cardBorder">
+            <div class="elementCard float cardBorder shadowBoxLt">
               <img src="./ar_05.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Form finding exercise </h5>
@@ -361,7 +361,7 @@
       <div class="Grid-cell">
         <a href="./manifold_ground/">
           <div class="element">
-            <div class="elementCard float cardBorder">
+            <div class="elementCard float cardBorder shadowBoxLt">
               <img src="./ar_04.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Urban public space</h5>
@@ -381,7 +381,7 @@
       <div class="Grid-cell">
         <a href="./LACAMA/">
           <div class="element">
-            <div class="elementCard float cardBorder">
+            <div class="elementCard float cardBorder shadowBoxLt">
               <img src="./ar_08.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Musume extension</h5>
