--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <div class="element">
           <a href="/appointa/">
             <div class="">
-              <div class="elementCard float cardBorder APPOINTA">
+              <div class="elementCard float cardBorder APPOINTA shadowBoxLt">
                 <img src="./image/Cover_APPOINTA.png" alt="APPOINTA">
                 <div class="element">
                   <div class="element">
@@ -233,7 +233,7 @@
       <div class="Grid-cell">
         <div class="element">
           <a href="/seer/">
-            <div class="elementCard float cardBorder SEER">
+            <div class="elementCard float cardBorder SEER shadowBoxLt">
               <img src="./image/Cover_SEER.png" alt="SEER">
               <div class="element">
                 <div class="element">
@@ -255,7 +255,7 @@
 
       <div class="Grid-cell">
         <div class="element">
-          <div class="elementCard float cardBorder">
+          <div class="elementCard float cardBorder shadowBoxLt">
             <div class="img__wrap">
               <img class="img__img" alt="Work Samples" src="./image/Cover_worksample.png" />
               <div class="img__description">
@@ -285,7 +285,7 @@
           <a href="/design_system/">
             <div class="">
 
-              <div class="elementCard float cardBorder">
+              <div class="elementCard float cardBorder shadowBoxLt">
                 <img src="./image/Cover_portfolioWeb.svg" alt="vickywang.me">
                 <div class="element">
                   <div class="element">
