--- a/about/index.html
+++ b/about/index.html
@@ -249,7 +249,7 @@
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
         <div class="element">
-          <div class="elementInner cardBorder ">
+          <div class="elementInner cardBorder shadowBoxLt">
             <img class="IconS" src="IconSearch.svg" alt="se-arrow">
             <div class="blankHXS"></div>
             <h3> <strong> Understanding &#38; Testing</strong> </h3>
@@ -265,7 +265,7 @@
 
       <div class="Grid-cell">
         <div class="element">
-          <div class="elementInner cardBorder ">
+          <div class="elementInner cardBorder shadowBoxLt">
             <img class="IconS" src="IconCategory.svg" alt="se-arrow">
 
             <div class="blankHXS"></div>
@@ -286,7 +286,7 @@
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
         <div class="element">
-          <div class="elementInner cardBorder ">
+          <div class="elementInner cardBorder shadowBoxLt">
             <img class="IconS" src="iconBrush.svg" alt="se-arrow">
 
             <div class="blankHXS"></div>
@@ -303,7 +303,7 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="elementInner cardBorder ">
+          <div class="elementInner cardBorder shadowBoxLt">
             <img class="IconS" src="IconDocument.svg" alt="se-arrow">
 
             <div class="blankHXS"></div>
