--- a/design_system/index.html
+++ b/design_system/index.html
@@ -764,7 +764,7 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorGreyDarkBGestBG colorGreyLt shadowBox">
+          <div class="blockS Grey600 colorGreyLt shadowBox">
             <div>Grey 600</div>
             <div>HEX:999D9F</div>
           </div>
@@ -773,7 +773,7 @@
 
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorGreyDarkBG colorGreyLt shadowBox">
+          <div class="blockS Grey500 colorGreyLt shadowBox">
             <div>Grey 500</div>
             <div>HEX:c8c8c8</div>
           </div>
@@ -781,7 +781,7 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorGreyNormalBG shadowBox">
+          <div class="blockS Grey400 shadowBox">
             <div>Grey 400</div>
             <div>HEX:e4e4e4</div>
           </div>
@@ -796,7 +796,7 @@
 
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorGreyLightBG shadowBox">
+          <div class="blockS Grey300 shadowBox">
             <div>Grey 300</div>
             <div>HEX:efefef</div>
           </div>
@@ -804,27 +804,27 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorGreyLightBGest shadowBox">Grey 200 HEX:f8f8f8</div>
+          <div class="blockS Grey200 shadowBox">Grey 200 HEX:f8f8f8</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element displayNone">
-          <div class="blockS colorGreyLightBGest shadowBox">Grey 200 HEX:f8f8f8</div>
+          <div class="blockS Grey200 shadowBox">Grey 200 HEX:f8f8f8</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element displayNone">
-          <div class="blockS colorGreyLightBGest shadowBox">Grey 200 HEX:f8f8f8</div>
+          <div class="blockS Grey200 shadowBox">Grey 200 HEX:f8f8f8</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element displayNone">
-          <div class="blockS colorGreyLightBGest shadowBox">Grey 200 HEX:f8f8f8</div>
+          <div class="blockS Grey200 shadowBox">Grey 200 HEX:f8f8f8</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element displayNone">
-          <div class="blockS colorGreyLightBGest shadowBox">Grey 200 HEX:f8f8f8</div>
+          <div class="blockS Grey200 shadowBox">Grey 200 HEX:f8f8f8</div>
         </div>
       </div>
     </div>
@@ -885,17 +885,17 @@
     <div class="Grid Grid--gutters Grid--cols-3 u-textCenter">
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorGreyLightBGest shadowFilter">Small Shadow</div>
+          <div class="blockS Grey200 shadowFilter">Small Shadow</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorGreyLightBGest shadowBox">Normal Shadow</div>
+          <div class="blockS Grey200 shadowBox">Normal Shadow</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorGreyLightBGest shadowFilterL">Larger Shadow</div>
+          <div class="blockS Grey200 shadowFilterL">Larger Shadow</div>
         </div>
       </div>
     </div>
